[gd_scene load_steps=9 format=3 uid="uid://nqa7ku5tjn3o"]

[ext_resource type="Script" uid="uid://bu316oh4gmy73" path="res://scripts/game_state.gd" id="1"]
[ext_resource type="Script" uid="uid://b6d0b1id1eqeg" path="res://scripts/runner.gd" id="2"]
[ext_resource type="Script" uid="uid://c5fq7qmpf0xfg" path="res://scripts/replay_buffer.gd" id="3"]
[ext_resource type="Script" uid="uid://iivyjfvkwekv" path="res://scripts/replay_player.gd" id="4"]
[ext_resource type="Script" uid="uid://d3e7l4tyyat5w" path="res://scripts/game_ui.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://cqxvvvqxqxqxq" path="res://icon.svg" id="6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_runner"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boundary"]
size = Vector2(10000, 100)

[node name="Main" type="Node2D"]

[node name="GameState" type="Node" parent="."]
script = ExtResource("1")

[node name="ReplayBuffer" type="Node" parent="."]
script = ExtResource("3")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(540, 960)

[node name="Runner" type="CharacterBody2D" parent="."]
position = Vector2(300, 500)
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="Runner"]
modulate = Color(0.2, 0.8, 1, 1)
scale = Vector2(1.0, 1.0)
texture = ExtResource("6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Runner"]
shape = SubResource("RectangleShape2D_runner")

[node name="World" type="Node2D" parent="."]

[node name="Floor" type="StaticBody2D" parent="World"]
position = Vector2(0, 1970)

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Floor"]
shape = SubResource("RectangleShape2D_boundary")

[node name="ColorRect" type="ColorRect" parent="World/Floor"]
offset_left = -5000.0
offset_top = -50.0
offset_right = 5000.0
offset_bottom = 50.0
color = Color(0.3, 0.3, 0.3, 1)

[node name="Ceiling" type="StaticBody2D" parent="World"]
position = Vector2(0, -50)

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Ceiling"]
shape = SubResource("RectangleShape2D_boundary")

[node name="ColorRect" type="ColorRect" parent="World/Ceiling"]
offset_left = -5000.0
offset_top = -50.0
offset_right = 5000.0
offset_bottom = 50.0
color = Color(0.3, 0.3, 0.3, 1)

[node name="ObstacleSpawner" type="Node2D" parent="World"]
script = ExtResource("4")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TimerLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "0.00 s"
horizontal_alignment = 1

[node name="DeathOverlay" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/DeathOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="TimeSurvivedLabel" type="Label" parent="UI/DeathOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "You survived 0.00 seconds"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/DeathOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Restart"
